non-root в python image, но пока что root у nginx

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,9 +15,9 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:12.0-alpine
+    image: 'docker.io/bitnami/postgresql:12-debian-10'
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - 'postgres_data:/bitnami/postgresql'
     env_file:
       - ./.env.prod.db
   nginx:
