--- a/website/Dockerfile.prod
+++ b/website/Dockerfile.prod
@@ -17,12 +17,15 @@ RUN apk update \
     && apk add postgresql-dev gcc python3-dev musl-dev
 
 # lint
-RUN pip install --upgrade pip
-RUN pip install flake8
-COPY . .
-RUN flake8 --ignore=E501,F401 .
+# Флак не устанавливаем и не запускаем, так как никогда
+# не пройдём эту проверку на wagtail
+# COPY . .
+# RUN pip install flake8
+# RUN flake8 --ignore=E501,F401 .
+
 # install dependencies
 COPY ./requirements.txt .
+RUN pip install --upgrade pip
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
 
@@ -48,7 +51,11 @@ RUN mkdir $APP_HOME/mediafiles
 WORKDIR $APP_HOME
 
 # install dependencies
-RUN apk update && apk add libpq
+RUN apk update \
+	&& apk add --virtual build-deps gcc python3-dev musl-dev \
+	&& apk add libpq jpeg-dev zlib-dev libjpeg\
+	&& pip install Pillow \
+	&& apk del build-deps
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install --no-cache /wheels/*
