--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,22 @@
-upstream website {
+upstream blog {
     server web:8000;
 }
 
 server {
     
-    listen 80;
+    listen 8080;
     
     location / {
-        proxy_pass http://website;
+        proxy_pass http://blog;
+
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-NginX-Proxy true;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
     }
 
-    location /static/ {
+    location /staticfiles/ {
         alias /home/app/web/staticfiles/;
     }
 
