--- a/website/Dockerfile.prod
+++ b/website/Dockerfile.prod
@@ -54,7 +54,7 @@ WORKDIR $APP_HOME
 RUN apk update \
 	&& apk add --virtual build-deps gcc python3-dev musl-dev \
 	&& apk add libpq jpeg-dev zlib-dev libjpeg\
-	&& pip install Pillow \
+	&& pip install --no-cache Pillow \
 	&& apk del build-deps
 COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
