--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -10,7 +10,7 @@ ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
 RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev jpeg-dev zlib-dev
+    && apk add postgresql-dev gcc python3-dev musl-dev jpeg-dev zlib-dev libwebp-dev
 
 # install dependencies
 RUN pip install --upgrade pip
