--- a/website/Dockerfile.prod
+++ b/website/Dockerfile.prod
@@ -53,7 +53,7 @@ WORKDIR $APP_HOME
 # install dependencies
 RUN apk update \
 	&& apk add --virtual build-deps gcc python3-dev musl-dev \
-	&& apk add libpq jpeg-dev zlib-dev libjpeg\
+	&& apk add libpq jpeg-dev zlib-dev libwebp-dev\
 	&& pip install --no-cache Pillow \
 	&& apk del build-deps
 COPY --from=builder /usr/src/app/wheels /wheels
