--- a/haraka/smtp.ini
+++ b/haraka/smtp.ini
@@ -17,8 +17,8 @@ listen=[::0]:8025
 ;inactivity_timeout=300
 
 ; Drop privileges to this user/group
-;user=smtp
-;group=smtp
+user=node
+group=node
 
 ; Don't stop Haraka if plugins fail to compile
 ;ignore_bad_plugins=0
