создана кастомная сеть, чтобы почтовый релей работал правильно, устранены ошибки

--- a/.env.dev
+++ b/.env.dev
@@ -9,3 +9,7 @@ SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
 SETTINGS_MODULE=config.settings.dev
+BASE_URL=example.com
+WAGTAIL_SITE_NAME=example
+LANGUAGE_CODE=ru
+TIME_ZONE=Europe/Moscow
