--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -4,24 +4,32 @@ services:
     build:
       context: ./website
       dockerfile: Dockerfile.prod
-    command: gunicorn config.wsgi:application --workers=4 --access-logfile - --error-logfile - --log-file - --bind 0.0.0.0:8000
+    command: "gunicorn config.wsgi:application --workers=4
+      --access-logfile - --error-logfile - --bind 0.0.0.0:8000"
+    restart: unless-stopped
     volumes:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
     expose:
       - 8000
+    networks:
+      - app_net
     env_file:
       - ./.env.prod
     depends_on:
       - db
   db:
     image: 'docker.io/bitnami/postgresql:12-debian-10'
+    restart: unless-stopped
     volumes:
       - 'postgres_data:/bitnami/postgresql'
+    networks:
+      - app_net
     env_file:
       - ./.env.prod.db
   nginx:
     image: 'docker.io/bitnami/nginx:latest'
+    restart: unless-stopped
     #build: ./nginx
     volumes:
       - ./nginx/nginx.conf:/opt/bitnami/nginx/conf/server_blocks/blog.conf:ro
@@ -29,23 +37,39 @@ services:
       - media_volume:/home/app/web/mediafiles
     ports:
       - 1337:8080
+    networks:
+      - app_net
     depends_on:
       - web
   pgbouncer:
     image: 'docker.io/edoburu/pgbouncer'
-    depends_on:
-      - db
+    restart: unless-stopped
+    networks:
+      - app_net
     env_file:
       - ./.env.pgbouncer
+    depends_on:
+      - db
   memcached:
     image: memcached:alpine
+    restart: unless-stopped
+    networks:
+      - app_net
   haraka:
     build: ./haraka
+    restart: unless-stopped
     ports:
       - 25:8025
+    networks:
+      - app_net
     env_file:
       - ./.env.haraka
 volumes:
   postgres_data:
   static_volume:
   media_volume:
+networks:
+  app_net:
+    ipam:
+      config:
+        - subnet: 172.16.238.0/24
