--- a/haraka/config/smtp.ini
+++ b/haraka/config/smtp.ini
@@ -24,7 +24,7 @@ group=node
 ;ignore_bad_plugins=0
 
 ; Run using cluster to fork multiple backend processes
-;nodes=cpus
+nodes=1
 
 ; Daemonize
 ;daemonize=true
