--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,7 +26,7 @@ services:
     networks:
       - app_net
     env_file:
-      - ./.env.prod.db
+      - ./.env.database
   nginx:
     image: 'docker.io/bitnami/nginx:latest'
     restart: unless-stopped
@@ -36,7 +36,7 @@ services:
       - static_volume:/home/app/web/staticfiles
       - media_volume:/home/app/web/mediafiles
     ports:
-      - 1337:8080
+      - 80:8080
     networks:
       - app_net
     depends_on:
