sitemaps and robots

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,4 +25,7 @@ server {
         alias /home/app/web/mediafiles/;
     }
 
+    location /robots.txt {
+        alias /home/app/web/staticfiles/robots.txt;
+    }
 }
